--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-   
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
-    <title>MTiT</title>
+    <title>NSC</title>
+    <link rel="shortcut icon" type="image/x-icon" href="src/assets/newSuccescolage.ico" />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-   
   </body>
 </html>
